--- a/css/gameLayout.css
+++ b/css/gameLayout.css
@@ -5,11 +5,38 @@ body, html {
 
 }
 
-#backstage {
+#backstage, #multiHeader {
     position:relative;
     top:16px;
     margin: 0 auto;
     width: 830px;
+}
+#multiHeader {
+    color: white;
+    min-height: 12px;
+    top: 4px;
+}
+#multiHeader > div {
+    display: inline-block;
+    width: 31%;
+    border-left: 1px solid #999;
+    border-bottom: 1px solid #777;
+    border-bottom-left-radius: 4px;
+    color: #cdc;
+}
+#multiHeader > div > div {
+    display: inline-block;
+    width: 16%;
+    padding: 0 6px 4px 4px;
+}
+
+#multiHeader > div :first-child{
+    width: 45%;
+}
+
+.num {
+    text-align: right;
+    font-weight: bold;
 }
 
 #loading {
