--- a/css/gameLayout.css
+++ b/css/gameLayout.css
@@ -2,14 +2,47 @@ body, html {
     background: #464;
     font-family: verdana, Arial, sans-serif;
     font-size:14px;
+    box-sizing: border-box;
+}
 
+.innerDiv {
+    position:relative;
+    margin: 0 auto;
+    width: 830px;
 }
 
 #backstage, #multiHeader {
-    position:relative;
     top:16px;
-    margin: 0 auto;
-    width: 830px;
+}
+
+#multiStage {
+    position:absolute;
+    z-index: 10000;
+    display:block;
+    color: #cdc;
+    width: 100%;
+    top: 7%;
+
+}
+#multiStage > .innerDiv {
+    border: 1px solid #999;
+    border-bottom-color: #777;
+    border-right-color: #777;
+    border-radius: 8px;
+    padding: 12px;
+    height: 400px;
+    width: 600px;
+    background: #464;
+}
+#darkLayer {
+    position: absolute;
+    margin: 0;
+    top:0;
+    left:0;
+    background: rgba(0,0,0,.5);
+    height: 100%;
+    width: 100%;
+    z-index: 9999;
 }
 
 #chatDiv {
@@ -39,8 +72,8 @@ body, html {
     color: #cdc;
 }
 .chatOutput {
-    height:220px;
-    max-height:220px;
+    height:130px;
+    max-height:130px;
     overflow:auto;
     -ms-overflow-style: none;
     overflow-x: hidden;
@@ -50,7 +83,7 @@ body, html {
     display: none;
 }
 #multiHeader {
-    color: white;
+    /*color: white;*/
     min-height: 12px;
     top: 4px;
 }
@@ -75,6 +108,32 @@ body, html {
 #multiHeader > div :first-child{
     width: 45%;
     white-space: nowrap;
+}
+
+.table {
+    display: table;
+    width: 100%;
+}
+
+.table > div {
+    display: table-row;
+    min-width: 100%;
+    height: 32px;
+    border-radius: 8px;
+}
+
+.table > div.even {
+    background: rgba(255,255,255,.2);
+}
+
+.table > div > div {
+    display: table-cell;
+    padding:4px 12px 4px 4px;
+    text-align: right;
+}
+
+.table > div :first-child {
+    text-align: left;
 }
 
 .leaveRoomButton {
@@ -115,6 +174,11 @@ body, html {
     font-size: 12px !important;
     color: #cdc;
     cursor: pointer;
+}
+
+.relButton {
+    position: relative !important;
+    background: #464 !important;
 }
 
 .button span {
