--- a/css/gameLayout.css
+++ b/css/gameLayout.css
@@ -157,20 +157,35 @@ body, html {
     border-bottom-color: #444;
     border-right-color: #444;
     border-radius: 7px;
-    transition: transform 0.17s;
-    transform-style: preserve-3d;
+    transition: transform 1.17s;
+}
+#openThumbs {
+    position: relative;
+    left: -36px;
+    width: 36px;
+    float:left
+}
+.thumb {
+    position: relative;
+    width: 20px;
+    height: 34px;
+    background-image: url("../img/card_deck_50.png");
 }
 
 .turned .inner {
-    transform: rotateY(180deg);
+
+}
+
+.turned .inner .cardBack{
+    transition: background 0.6s ease;
+    background: none;
 }
 
 .cardFront {
-    transform: rotateY(180deg);
+    /*transform: rotateY(180deg);*/
     background-image: url("../img/card_deck_50.png");
 }
 
 .cardBack {
-    background-image: url("../img/card_deck_back_50.png") !important;
-    background-position: -8px -8px !important;
+    background-color: rgba(33,33,33,0.666);
 }
